--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,10 @@
     <title>{% block title %}{% trans "Elmer Urbina - AI Developer" %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<!-- Google tag (gtag.js) --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BQHDQHH306"></script>
+    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-BQHDQHH306'); </script>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light px-4">
